@@ -3,6 +3,7 @@ Revision history for Log-WarnDie
 0.12
 	Use Test::DescribeMe to simplify tests
 	Added t/30-basics.t
+	Fix "Deep recursion on anonymous subroutine"
 
 0.11	Thu Jul 18 08:12:22 EDT 2024
 	Added Test::Needs
